--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
-
+title: Nipuna Abeysinghe
+##logo: /assets/Profile_pic_2.png
+description: Hands-on mechatronics engineer 
+#show_downloads: true
+#google_analytics:
+theme: jekyll-theme-minimal
