--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Nipuna Abeysinghe
 logo: /Assets/img/Profile_pic_2.png
-description: Hands-on mechatronics engineer 
+description:I design practical solutions and make them easy to understand
 #show_downloads: true
 #google_analytics:
 theme: jekyll-theme-minimal
