--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Nipuna Abeysinghe
 logo: /Assets/img/Profile_pic_2.png
-description:I design practical solutions and make them easy to understand
+description:Engineer|Problem Solver|Communicator
 #show_downloads: true
 #google_analytics:
 theme: jekyll-theme-minimal
