--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Nipuna Abeysinghe
 logo: /Assets/img/Profile_pic_2.png
-description:Engineer|Problem Solver
+description:Problem Solver
 #show_downloads: true
 #google_analytics:
 theme: jekyll-theme-minimal
