--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Nipuna Abeysinghe
 logo: /Assets/img/Profile_pic_2.png
-description: Engineer|Problem Solver|communicator
+description: m Nipuna, an engineer with hands-on experience in CAD and PCB design, embedded systems, prototyping and process optimization. I enjoy solving real-world problems through smart design and clear documentation. My work spans industries such as electronics manufacturing, mechanical assembly, and factory automation. This portfolio showcases some of the personal and professional projects I’ve worked on — combining engineering design, data analysis, and technical communication. I’m always looking to learn, build, and contribute to meaningful projects.
 #show_downloads: true
 #google_analytics:
 theme: jekyll-theme-minimal
