--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Nipuna Abeysinghe
 logo: /Assets/img/Profile_pic_2.png
-description: Engineer with hands-on experience in CAD and PCB design, embedded systems, prototyping and process optimization. I enjoy solving real-world problems through smart design and clear documentation. My work spans industries such as electronics manufacturing, mechanical assembly, and factory automation. This portfolio showcases some of the personal and professional projects I’ve worked on.
+description: Experience in CAD and PCB design, embedded systems, prototyping and process optimization. I enjoy solving real-world problems through smart design and clear documentation. My work spans industries such as electronics manufacturing, mechanical assembly, and factory automation. This portfolio showcases some of the personal and professional projects I’ve worked on.
 #show_downloads: true
 #google_analytics:
 theme: jekyll-theme-minimal
