--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Nipuna Abeysinghe
 logo: /Assets/img/Profile_pic_2.png
-description: Experience in CAD and PCB design, embedded systems, prototyping and process optimization. I enjoy solving real-world problems through smart design and clear documentation. My work spans industries such as electronics manufacturing, mechanical assembly, and factory automation. This portfolio showcases some of the personal and professional projects I’ve worked on.
+description: Engineer | Problem Solver | Communicator
+I design practical solutions and make them easy to understand.
 #show_downloads: true
 #google_analytics:
 theme: jekyll-theme-minimal
